# aer-search-aws-goes

./: .gitignore  PUBLISH.md  README.md  pyproject.toml  setup.sh
.agents/skills/new-release/: SKILL.md
.github/workflows/: release.yml
.planning/: STATE.md
.planning/quick/260322-vre-fix-all-listed-bugs-i-bug-5-bandownload-/: 260322-vre-PLAN.md  260322-vre-SUMMARY.md
components/aer/search_aws_goes/: __init__.py  core.py
projects/aer-search-aws-goes/: README.md  pyproject.toml
test/components/aer/search_aws_goes/: test_core.py
