[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aer-search-aws-goes-workspace"
version = "1.1.0"
description = "A template code repo for aer plugins"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Fran Dorr" }]
dependencies = [
    "aer-core",
    "geopandas>=1.1.2,<2.0.0",
    "pandera[geopandas]>=0.24.0,<0.25.0",
    "s3fs>=2026.2.0,<2027.0.0",
]

[tool.uv]
managed = true
add-bounds = "major"

[tool.uv.workspace]
members = ["projects/*"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.ruff]
exclude = [
    ".git",
    ".github",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    "dist",
    ".venv",
    "./development/*.py",
]
line-length = 120

[tool.basedpyright]
venvPath = "."
venv = ".venv"
extraPaths = ["components/", "bases/"]

[dependency-groups]
dev = [
    "polylith-cli>=1.43.0,<2.0.0",
    "pytest>=9.0.2,<10.0.0",
    "python-semantic-release>=10.5.3,<11.0.0",
]

[tool.polylith]
bricks."components/aer/search-aws-goes" = "aer/search-aws-goes"
bricks."components/aer/search_aws_goes" = "aer/search_aws_goes"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
